@@ -27,6 +27,8 @@
 //
 
 using System;
+using System.Collections;
+using System.Linq;
 using System.Collections.Generic;
 
 using Mono.Cecil;
@@ -64,14 +66,27 @@ namespace Gendarme.Rules.Maintainability {
 			Runner.Report (type, sev, Confidence.Normal, s);
 			return RuleResult.Failure;
 		}
+		
+		//TODO: Perhaps is a nice candidate to be a rock ?
+		//It will allow us use linq with Cecil in the rules :)
+		private IEnumerable<T> ToIEnumerable<T> (IEnumerable enumerable) 
+		{
+			foreach (T t in enumerable)
+				yield return t;
+		}
 
 		public double GetCohesivenessForType (TypeDefinition type)
 		{
 			int M = 0;//M is the number of methods in the type
 			//F keeps the count of distinct-method accesses to the field
 			Dictionary<FieldReference, int> F = new Dictionary<FieldReference, int>();
+			
+			var methods = from met in ToIEnumerable<MethodDefinition> (type.Methods)
+				where met.HasBody 
+				where !met.IsSpecialName
+				select met; 
 
-			foreach (MethodDefinition method in type.Methods)
+			foreach (MethodDefinition method in methods)
 			{
 				//Mset is true if the method has already incremented M
 				bool Mset = false;
@@ -80,9 +95,6 @@ namespace Gendarme.Rules.Maintainability {
 
 				foreach (Instruction inst in method.Body.Instructions)
 				{
-					if (method.IsSpecialName) //accessors would skew the value
-						continue;
-
 					if (OperandType.InlineField == inst.OpCode.OperandType)
 					{
 						FieldDefinition fd = inst.Operand as FieldDefinition;
